Project is finished

--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -7,10 +7,10 @@
   </ion-toolbar>
   <ion-segment value='login'>
     <ion-segment-button value="login"  (ionSelect)="segmentButtonClicked($event.target.value)">
-      <ion-icon name="log-in"></ion-icon>Iniciar Sessión
+      <ion-icon name="log-in"></ion-icon>Iniciar sesión
     </ion-segment-button>
     <ion-segment-button value="register"  (ionSelect)="segmentButtonClicked($event.target.value)">
-      <ion-icon name="person-add"></ion-icon>Registrar-se
+      <ion-icon name="person-add"></ion-icon>Registro
     </ion-segment-button>
   </ion-segment>
 </ion-header>
