--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -8,8 +8,8 @@
 
 :root {
   /** primary **/
-  --ion-color-primary: #3880ff;
-  --ion-color-primary-rgb: 56, 128, 255;
+  --ion-color-primary: #026fc9;
+  --ion-color-primary-rgb: 2, 111, 201;
   --ion-color-primary-contrast: #ffffff;
   --ion-color-primary-contrast-rgb: 255, 255, 255;
   --ion-color-primary-shade: #3171e0;
