--- a/src/app/collections/collections.component.html
+++ b/src/app/collections/collections.component.html
@@ -1,16 +1,8 @@
 <ion-header>
   <ion-toolbar color='dark'>
-    <ion-buttons slot="start">
-      <ion-back-button></ion-back-button>
-    </ion-buttons>
     <ion-title>
-      Lista de productos
+      Mis coleciones
     </ion-title>
-    <ion-buttons slot="end">
-        <ion-button (click)="cansearch()">
-          <ion-icon slot="icon-only" name="search"></ion-icon>
-        </ion-button>
-      </ion-buttons>
       <ion-avatar slot="end">
         <img *ngIf="!authenticated" [routerLink]="['/login']"
           src="https://cdn1.iconfinder.com/data/icons/business-users/512/circle-512.png"
@@ -20,28 +12,18 @@
           alt="https://cdn2.iconfinder.com/data/icons/scenarium-vol-4/128/002_avatar_man_profile_account_user_male-128.png">
       </ion-avatar>
   </ion-toolbar>
-  <ion-toolbar [hidden]="!search" [color]="authenticated == true ? 'dark' : 'default'">
-      <ion-buttons slot="start">
-        <ion-button (click)="cansearch()">
-          <ion-icon name='arrow-back'></ion-icon>
-        </ion-button>
-      </ion-buttons>
-      <ion-searchbar [(ngModel)]="queryText" [color]="authenticated == true ? 'dark' : 'default'"
-        (ionChange)="updateSchedule()" placeholder="Search" animated autocorrect='on'></ion-searchbar>
-  </ion-toolbar>
 </ion-header>
 <ion-content>
+  <ion-item [hidden]='collections.length > 0'>No hay niguna coleción</ion-item>
     <ion-item-sliding *ngFor="let collection of collections" >
-        <ion-item-options side="start">
-          <ion-item-option (click)="delete(collection)">Favorite</ion-item-option>
-        </ion-item-options>
-    
-        <ion-item>
+        <ion-item color="primary" >
           <ion-label>{{collection.name}}</ion-label>
         </ion-item>
     
         <ion-item-options side="end">
-          <ion-item-option (click)="delete(collection.id)">Unread</ion-item-option>
+          <ion-item-option color="danger" (click)="delete(collection.id)">
+            <ion-icon name='trash'></ion-icon>
+          </ion-item-option>
         </ion-item-options>
       </ion-item-sliding>
 </ion-content>
