--- a/src/app/reserve-list/reserve-list.component.html
+++ b/src/app/reserve-list/reserve-list.component.html
@@ -1,16 +1,34 @@
 <ion-header>
   <ion-toolbar color="dark">
-    <ion-buttons slot="start">
-      <ion-back-button></ion-back-button>
-    </ion-buttons>
     <ion-title>
       Mis Reservas
     </ion-title>
+    <ion-avatar slot="end">
+      <img *ngIf="!authenticated" [routerLink]="['/login']"
+        src="https://cdn1.iconfinder.com/data/icons/business-users/512/circle-512.png"
+        alt="https://cdn2.iconfinder.com/data/icons/scenarium-vol-4/128/002_avatar_man_profile_account_user_male-128.png">
+
+      <img *ngIf="authenticated" [routerLink]="['/profile', currentUser.usuario]" [src]="currentUser.avatar"
+        alt="https://cdn2.iconfinder.com/data/icons/scenarium-vol-4/128/002_avatar_man_profile_account_user_male-128.png">
+    </ion-avatar>
   </ion-toolbar>
 </ion-header>
 <ion-content>
-  <p>
-    reserve-list works!
-  </p>
+  <ion-grid *ngIf="list.length > 0">
+    <ion-col *ngFor="let info of list; let i of index" size='12'>
+      <ion-row>
+        <ion-col size='4' routerLink="/details/{{info.isbn}}" >
+          <ion-img class="item-img" src="{{info.image}}" alt="{{info.titulo}}"></ion-img>
+        </ion-col>
+        <ion-col size='8'>
+          <p id="{{info.isbn}}" routerLink="/details/{{info.isbn}}" >{{info.titulo}}</p>
+          <p routerLink="/details/{{info.isbn}}" >{{info.name}}</p>
+          <div class="ion-align-items-baseline" style=" width:100%; display:inline-flex; justify-content:space-around;">
+            {{info.datestart}} - {{info.dateend}}
+          </div>
+        </ion-col>
+      </ion-row>
+    </ion-col>
+  </ion-grid>
 </ion-content>
 
