--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,33 +1,33 @@
 <ion-tabs>
   <ion-tab-bar slot="start" *ngIf="!authenticated">
-    <ion-tab-button tab="tab1">
+    <ion-tab-button tab="books_coffees">
       <ion-icon name="home"></ion-icon>
       <ion-label>Pagina principal</ion-label>
     </ion-tab-button>
-    <ion-tab-button tab="tab3">
+    <ion-tab-button tab="events">
       <ion-icon name="calendar"></ion-icon>
       <ion-label>Eventos</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
   <ion-tab-bar slot="start" *ngIf="authenticated" color="dark" ion-padding>
-    <ion-tab-button tab="tab1">
+    <ion-tab-button tab="books_coffees">
       <ion-icon name="home"></ion-icon>
       <ion-label>Principal</ion-label>
     </ion-tab-button>
-    <ion-tab-button routerLink="/favorites">
+    <ion-tab-button tab="favorites">
       <ion-icon name="heart"></ion-icon>
       <ion-label>Favoritos</ion-label>
     </ion-tab-button>
-    <ion-tab-button tab="tab3">
+    <ion-tab-button tab="events">
       <ion-icon name="calendar"></ion-icon>
       <ion-label>Eventos</ion-label>
     </ion-tab-button>
-    <ion-tab-button routerLink="/reserves">
-      <ion-icon name="bookmarks"></ion-icon>
+    <ion-tab-button tab="reserves">
+      <ion-icon name="archive"></ion-icon>
       <ion-label>Reservas</ion-label>
     </ion-tab-button>
-    <ion-tab-button routerLink="/collections">
-      <ion-icon name="archive"></ion-icon>
+    <ion-tab-button tab="collections">
+      <ion-icon name="bookmark"></ion-icon>
       <ion-label>Coleciones</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
