--- a/src/app/details/details.page.html
+++ b/src/app/details/details.page.html
@@ -31,12 +31,11 @@
       <ion-item>
         <ion-text> Autor/a: {{info.name}}</ion-text>
       </ion-item>
-        <p>Año de publicación: {{info.yearpublication}}</p>
-        <p>Numero de paginas: {{info.numpags}}</p>
-        <p>Stock: {{info.stock}}</p>
-        <p>Edición: {{info.edition}}</p>
-        <p>Idioma: {{info.languaje}}</p>
-                  
+        <p class="ion-padding-start" >Año de publicación: {{info.yearpublication}}</p>
+        <p class="ion-padding-start" >Numero de paginas: {{info.numpags}}</p>
+        <p class="ion-padding-start" >Stock: {{info.stock}}</p>
+        <p class="ion-padding-start" >Edición: {{info.edition}}</p>
+        <p class="ion-padding-start" >Idioma: {{info.languaje}}</p>    
     </ion-list>
 
     <p class="ion-padding-start">
