--- a/src/app/books_coffees/books_coffees.page.html
+++ b/src/app/books_coffees/books_coffees.page.html
@@ -59,13 +59,13 @@
 
 <!-- //////////////////////////////////////////////Libros //////////////////////-->
 
-  <ul class="container" *ngIf="books.length > 0" [hidden]="tab_active !== 'book'">
+<!--   <ul class="container" *ngIf="books.length > 0" [hidden]="tab_active !== 'book'">
     <li *ngFor="let track of tags1">
       <ion-chip [color]="colorSecundary" id="{{track}}" (click)="onfilter($event.target)">
         <ion-label> {{track}} </ion-label>
       </ion-chip>
     </li>
-  </ul>
+  </ul> -->
 
   <ion-refresher slot="fixed" (ionRefresh)="doRefresh($event)">
     <ion-refresher-content></ion-refresher-content>
@@ -104,19 +104,19 @@
 
 <!-- //////////////////////////////////////////////Cafes //////////////////////-->
 
-  <ul class="container" *ngIf="coffees.length > 0" [hidden]="tab_active !== 'coffee'">
+<!--   <ul class="container" *ngIf="coffees.length > 0" [hidden]="tab_active !== 'coffee'">
     <li *ngFor="let track of tags2">
       <ion-chip [color]="colorSecundary" (click)="onfilter($event.target)">
         <ion-label> {{track}} </ion-label>
       </ion-chip>
     </li>
-  </ul>
+  </ul> -->
 
   <ion-refresher slot="fixed" (ionRefresh)="doRefresh($event)">
     <ion-refresher-content></ion-refresher-content>
   </ion-refresher>
 
-  <ion-list *ngIf="coffees.length > 0" [hidden]="tab_active !== 'coffee'">
+<!--   <ion-list *ngIf="" [hidden]="tab_active !== ''">
     <ion-item *ngFor="let info of coffees" [ngStyle]="{'width': 320, 'height': 510}" routerLinkActive="active"
       [routerLinkActiveOptions]="{ exact: true }" routerLink="/coffeedetails/{{info.id}}">
       <ion-img width="auto" height="350px" src="{{info.image}}" alt="{{info.displayName}}"></ion-img>
@@ -129,6 +129,27 @@
       <ion-title *ngFor="let info of coffees" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }"
         routerLink="/coffeedetails/{{info.id}}">{{info.name}}</ion-title>
     </ion-item>
-  </ion-list>
+  </ion-list> -->
 
+  <ion-grid *ngIf="coffees.length > 0" [hidden]="tab_active !== 'coffee'">
+    <ion-col *ngFor="let info of coffees; let i of index" size='12'>
+      <ion-row>
+        <ion-col size='4' routerLink="/coffeedetails/{{info.id}}">
+          <ion-img class="item-img" src="{{info.image}}" alt="{{info.name}}"></ion-img>
+        </ion-col>
+        <ion-col size='8'>
+          <p id="{{info.id}}" routerLink="/coffeedetails/{{info.id}}">{{info.name}}</p>
+          <div class="ion-align-items-baseline" style=" width:100%; display:inline-flex; justify-content:space-around;">
+            <div style="width:50%; display:inline-flex; justify-content:space-around; align-items:center;"
+              *ngIf="authenticated">
+              <ion-buttons slot="start" *ngFor="let info of coffees">
+                <ion-icon name="bookmark" (click)="clickEventHandlerSave(info)" [color]="info.collection ? 'dark' : 'medium'">
+                </ion-icon>
+              </ion-buttons>
+            </div>
+          </div>
+        </ion-col>
+      </ion-row>
+    </ion-col>
+  </ion-grid>
 </ion-content>
