--- a/src/app/events/events.page.html
+++ b/src/app/events/events.page.html
@@ -23,7 +23,7 @@
 <ion-content>
 
 
-  <ion-list-header *ngIf="authenticated  && tab_active === 'list' && authors2.length > 0"  >
+<!--   <ion-list-header *ngIf="authenticated  && tab_active === 'list' && authors2.length > 0"  >
     <ul class="container">
       <li *ngFor="let author of authors2" (click)="findauthor(author)" id={{author.id}}  [ngClass]="{'disabled':!author.select , 'avable': author.select }">
           <ion-avatar>
@@ -34,7 +34,7 @@
             </ion-text>
       </li>
     </ul>
-  </ion-list-header>
+  </ion-list-header> -->
 
   <ion-list-header *ngIf="authenticated  || tab_active !== 'list'" [hidden]="myevents.length > 0">
     No tingo ningun evento
@@ -48,7 +48,7 @@
   </ion-list>
 
 
-  <ion-list-header *ngIf="authenticated == false || tab_active === 'calendar' && authors.length > 0"  >
+  <!-- <ion-list-header *ngIf="authenticated == false || tab_active === 'calendar' && authors.length > 0"  >
     <ul class="container">
       <li *ngFor="let author of authors" (click)="findauthor(author)" id={{author.id}}  [ngClass]="{'disabled':!author.select , 'avable': author.select }">
           <ion-avatar>
@@ -59,14 +59,14 @@
             </ion-text>
       </li>
     </ul>
-  </ion-list-header>
+  </ion-list-header> -->
 
   <ion-list-header [hidden]='eventSource2.length > 0'  *ngIf=" tab_active === 'calendar'">
     No Hay nigun evento
   </ion-list-header>
 
-  <ion-list [hidden]="eventSource2.length === 0"  *ngIf="tab_active == 'calendar'">
-    <ion-item *ngFor="let session of eventSource2" color="light" >
+  <ion-list [hidden]="eventSource2.length <= 0"  *ngIf="tab_active == 'calendar'">
+    <ion-item *ngFor="let session of eventSource" color="light" >
       <h3 (click)="viewdetails(session)">{{session.titulo}}</h3>
       <ion-icon v-if='authenticated && eventSource2.length > 0' slot='end' name='add-circle' (click)="hendleevent(session)"></ion-icon>
     </ion-item>
@@ -74,108 +74,3 @@
 
 
 </ion-content>
-
-<!-- 
-  <ion-card *ngIf="addevent">
-    <ion-card-header tappable (click)="collapseCard = !collapseCard">
-      <ion-card-title>New Event</ion-card-title>
-    </ion-card-header>
-    <ion-card-content *ngIf="!collapseCard">
-      <ion-item>
-        <ion-input type="text" placeholder="Title" [(ngModel)]="event.title"></ion-input>
-      </ion-item>
-      <ion-item>
-        <ion-input type="text" placeholder="Description" [(ngModel)]="event.desc"></ion-input>
-      </ion-item>
-      <ion-item>
-        <ion-label>Start</ion-label>
-        <ion-datetime displayFormat="MM/DD/YYYY HH:mm" pickerFormat="MMM D:HH:mm" [(ngModel)]="event.startTime"
-          [min]="minDate"></ion-datetime>
-      </ion-item>
-      <ion-item>
-        <ion-label>End</ion-label>
-        <ion-datetime displayFormat="MM/DD/YYYY HH:mm" pickerFormat="MMM D:HH:mm" [(ngModel)]="event.endTime"
-          [min]="minDate"></ion-datetime>
-      </ion-item>
-      <ion-item>
-        <ion-label>All Day?</ion-label>
-        <ion-checkbox [(ngModel)]="event.allDay"></ion-checkbox>
-      </ion-item>
-      <ion-button fill="outline" expand="block" (click)="addEvent()" [disabled]="event.title == ''">Add Event
-      </ion-button>
-    </ion-card-content>
-  </ion-card>
-
-  <ion-list-header *ngIf= "!addevent && tab_active == 'calendar'">
-      <ion-title>
-          Events
-        </ion-title>
-        <ion-buttons slot="end">
-          <ion-button (click)="today()">Today</ion-button>
-        </ion-buttons>
-  </ion-list-header>
- 
-  <ion-grid *ngIf= "!addevent && tab_active == 'calendar'" >
-    <ion-row>
-      <ion-col size="4">
-        <ion-button expand="block" [color]="calendar.mode == 'month' ? 'primary' : 'default'"
-          (click)="changeMode('month')">Month</ion-button>
-      </ion-col>
-      <ion-col size="4">
-        <ion-button expand="block" [color]="calendar.mode == 'week' ? 'primary' : 'defualt'"
-          (click)="changeMode('week')">Week</ion-button>
-      </ion-col>
-      <ion-col size="4">
-        <ion-button expand="block" [color]="calendar.mode == 'day' ? 'primary' : 'default'"
-          (click)="changeMode('day')">Day</ion-button>
-      </ion-col>
-
-      <ion-col size="3" text-left>
-        <ion-button fill="clear" (click)="back()">
-          <ion-icon name="arrow-back" slot="icon-only"></ion-icon>
-        </ion-button>
-      </ion-col>
-
-      <ion-col size="6">
-        <ion-text>{{ viewTitle }}</ion-text>
-      </ion-col>
-      <ion-col size="3" text-right>
-        <ion-button fill="clear" (click)="next()">
-          <ion-icon name="arrow-forward" slot="icon-only"></ion-icon>
-        </ion-button>
-      </ion-col>
-    </ion-row>
-  </ion-grid>
-  
-
-  <calendar *ngIf="!addevent && tab_active == 'calendar'"  [eventSource]="eventSource" [calendarMode]="calendar.mode" [currentDate]="calendar.currentDate"
-    (onEventSelected)="onEventSelected($event)" (onTitleChanged)="onViewTitleChanged($event)"
-    (onTimeSelected)="onTimeSelected($event)" startHour="6" endHour="20" step="30" startingDayWeek="1">
-  </calendar>
-
-  <ion-fab vertical="bottom" horizontal="end" slot="fixed">
-    <ion-fab-button (click)="addevent = !addevent">
-      <ion-icon name="create"></ion-icon>
-    </ion-fab-button>
-  </ion-fab> -->
-
-
-
-
-
-<!-- <ion-grid *ngFor="let info of coffees; let i of index" [ngStyle]="{'width': 320, 'height': 510}"
-        routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }" routerLink="/coffeedetails/{{info.id}}">
-          <ion-row>
-            <ion-col>
-              <ion-img width="auto" height="350px" src="{{info.image}}" alt="{{info.displayName}}"></ion-img>
-              <ion-buttons slot="start">
-                <ion-icon name="heart" [color]="color" (click)="clickEventHandler($event.target)"></ion-icon>
-              </ion-buttons>
-              <ion-title routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }"
-                routerLink="/coffeedetails/{{info.id}}">{{info.name}}</ion-title>
-              <ion-buttons slot="end">
-                <ion-icon name="archive" [color]="colorSecundary" (click)="clickEventHandlerSave($event.target)"></ion-icon>
-              </ion-buttons>
-            </ion-col>
-          </ion-row>
-        </ion-grid>  -->
